[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://scripts/UI.gd" type="Script" id=2]
[ext_resource path="res://scr/images/fly2.png" type="Texture" id=3]
[ext_resource path="res://stone1.png" type="Texture" id=4]
[ext_resource path="res://scr/theme.tres" type="Theme" id=5]
[ext_resource path="res://itemsbar.png" type="Texture" id=6]
[ext_resource path="res://tutorial.tscn" type="PackedScene" id=7]
[ext_resource path="res://scr/images/item2.png" type="Texture" id=8]
[ext_resource path="res://scr/paperItem.tres" type="Texture" id=9]
[ext_resource path="res://scenes/Transition.tscn" type="PackedScene" id=10]
[ext_resource path="res://bag1.png" type="Texture" id=11]

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 8 )
region = Rect2( 51, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 8 )
region = Rect2( 51, 51, 45, 48 )

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Label:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:light_mask")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=14]
resource_name = "fade_in"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Label:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "fade_out"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Label:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Node" type="Node" groups=["main_game"]]
pause_mode = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 546.0, 600.0 ],
"_edit_vertical_guides_": [ 587.0, 641.0 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -547.0
margin_top = -513.0
margin_right = 632.0
margin_bottom = 502.0
color = Color( 0, 0.74902, 0.768627, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 0

[node name="Control" type="Control" parent="CanvasLayer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="UI" type="Control" parent="CanvasLayer/Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
input_pass_on_modal_close_click = false
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Control/UI"]
margin_right = 152.0
margin_bottom = 220.0
rect_scale = Vector2( 1.7, 1.7 )
columns = 2
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/UI/GridContainer"]
margin_left = 13.0
margin_right = 61.0
margin_bottom = 48.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture = SubResource( 9 )

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/UI/GridContainer"]
margin_left = 78.0
margin_right = 142.0
margin_bottom = 48.0
size_flags_horizontal = 0

[node name="Label" type="Label" parent="CanvasLayer/Control/UI/GridContainer/HBoxContainer"]
margin_top = 15.0
margin_right = 24.0
margin_bottom = 33.0
size_flags_horizontal = 6
size_flags_vertical = 6
text = "10"

[node name="Label5" type="Label" parent="CanvasLayer/Control/UI/GridContainer/HBoxContainer"]
margin_left = 28.0
margin_top = 15.0
margin_right = 64.0
margin_bottom = 33.0
size_flags_horizontal = 6
size_flags_vertical = 6
text = "/10"

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/Control/UI/GridContainer"]
margin_left = 13.0
margin_top = 52.0
margin_right = 61.0
margin_bottom = 100.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture = SubResource( 10 )

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Control/UI/GridContainer"]
margin_left = 78.0
margin_top = 52.0
margin_right = 142.0
margin_bottom = 100.0
size_flags_horizontal = 0

[node name="Label2" type="Label" parent="CanvasLayer/Control/UI/GridContainer/HBoxContainer2"]
margin_top = 15.0
margin_right = 24.0
margin_bottom = 33.0
size_flags_horizontal = 6
size_flags_vertical = 6
text = "10"

[node name="Label6" type="Label" parent="CanvasLayer/Control/UI/GridContainer/HBoxContainer2"]
margin_left = 28.0
margin_top = 15.0
margin_right = 64.0
margin_bottom = 33.0
size_flags_horizontal = 6
size_flags_vertical = 6
text = "/10"

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer/Control/UI/GridContainer"]
margin_left = 14.0
margin_top = 104.0
margin_right = 59.0
margin_bottom = 152.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture = SubResource( 11 )

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/Control/UI/GridContainer"]
margin_left = 78.0
margin_top = 104.0
margin_right = 142.0
margin_bottom = 152.0
size_flags_horizontal = 0

[node name="Label3" type="Label" parent="CanvasLayer/Control/UI/GridContainer/HBoxContainer3"]
margin_top = 15.0
margin_right = 24.0
margin_bottom = 33.0
size_flags_horizontal = 6
size_flags_vertical = 6
text = "10"

[node name="Label7" type="Label" parent="CanvasLayer/Control/UI/GridContainer/HBoxContainer3"]
margin_left = 28.0
margin_top = 15.0
margin_right = 64.0
margin_bottom = 33.0
size_flags_horizontal = 6
size_flags_vertical = 6
text = "/10"

[node name="TextureRect4" type="TextureRect" parent="CanvasLayer/Control/UI/GridContainer"]
margin_left = 5.0
margin_top = 156.0
margin_right = 69.0
margin_bottom = 220.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 3 )

[node name="Label4" type="Label" parent="CanvasLayer/Control/UI/GridContainer"]
self_modulate = Color( 0.254902, 0.819608, 0.188235, 1 )
margin_left = 85.0
margin_top = 179.0
margin_right = 145.0
margin_bottom = 197.0
size_flags_horizontal = 6
size_flags_vertical = 6
text = "10/10"

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control/UI"]
anchor_top = 0.871
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 0.319946
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/UI/CenterContainer"]
margin_left = 787.0
margin_top = 33.0
margin_right = 1131.0
margin_bottom = 105.0
texture = ExtResource( 6 )
stretch_mode = 1

[node name="CenterContainer3" type="CenterContainer" parent="CanvasLayer/Control/UI"]
anchor_top = 0.871
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 383.0
margin_top = 0.319946
margin_right = -383.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="GridContainer2" type="GridContainer" parent="CanvasLayer/Control/UI/CenterContainer3"]
margin_left = 409.0
margin_top = 37.0
margin_right = 745.0
margin_bottom = 101.0
custom_constants/hseparation = 4
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/Control/UI/CenterContainer3/GridContainer2"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 9 )

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer/Control/UI/CenterContainer3/GridContainer2"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
texture = ExtResource( 9 )

[node name="TextureRect4" type="TextureRect" parent="CanvasLayer/Control/UI/CenterContainer3/GridContainer2"]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 64.0
texture = ExtResource( 9 )

[node name="TextureRect5" type="TextureRect" parent="CanvasLayer/Control/UI/CenterContainer3/GridContainer2"]
margin_left = 204.0
margin_right = 268.0
margin_bottom = 64.0
texture = ExtResource( 9 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/UI/CenterContainer3/GridContainer2"]
margin_left = 272.0
margin_right = 336.0
margin_bottom = 64.0
texture = ExtResource( 9 )

[node name="CenterContainer2" type="CenterContainer" parent="CanvasLayer/Control/UI"]
anchor_top = 0.91
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1734.0
margin_top = -45.8
margin_right = -1.0
margin_bottom = 2.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/UI/CenterContainer2"]
margin_left = 43.0
margin_top = 22.0
margin_right = 142.0
margin_bottom = 121.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 11 )
stretch_mode = 1

[node name="CenterContainer4" type="CenterContainer" parent="CanvasLayer/Control/UI"]
anchor_top = 0.93
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1741.0
margin_top = -0.400024
margin_right = -1.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer/Control/UI/CenterContainer4"]
margin_left = 77.0
margin_top = 26.0
margin_right = 101.0
margin_bottom = 50.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer5" type="CenterContainer" parent="CanvasLayer/Control/UI"]
anchor_top = 0.93
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1750.0
margin_top = 8.59998
margin_right = -2.0
margin_bottom = 20.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer/Control/UI/CenterContainer5"]
margin_left = 72.0
margin_top = 31.0
margin_right = 96.0
margin_bottom = 55.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer6" type="CenterContainer" parent="CanvasLayer/Control/UI"]
anchor_top = 0.93
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1719.0
margin_top = 24.6
margin_right = -2.0
margin_bottom = -2.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer/Control/UI/CenterContainer6"]
margin_left = 87.0
margin_top = 12.0
margin_right = 111.0
margin_bottom = 36.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer7" type="CenterContainer" parent="CanvasLayer/Control/UI"]
anchor_top = 0.93
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1546.0
margin_top = -30.4
margin_right = -155.0
margin_bottom = -45.0
rect_scale = Vector2( 1.7, 1.7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Control/UI/CenterContainer7"]
margin_left = 88.0
margin_top = 21.0
margin_right = 130.0
margin_bottom = 39.0
text = "3/3"

[node name="Pause" type="Control" parent="CanvasLayer/Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.74902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Control/Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -960.0
margin_bottom = -540.0
rect_scale = Vector2( 2, 2 )
text = "Paused"
align = 1
valign = 1

[node name="Button" type="Button" parent="CanvasLayer/Control/Pause"]
anchor_top = 0.573
anchor_right = 1.0
anchor_bottom = 0.715
margin_left = 925.0
margin_top = 0.159973
margin_right = -925.0
margin_bottom = -129.2
text = "Quit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Transition" parent="CanvasLayer" instance=ExtResource( 10 )]

[node name="ColorRect" parent="CanvasLayer/Transition" index="1"]
visible = false

[node name="Message" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
mouse_filter = 2
input_pass_on_modal_close_click = false
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Message"]
self_modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.511
anchor_bottom = 0.516
margin_left = -960.0
margin_top = -540.0
margin_right = 938.88
margin_bottom = 522.72
input_pass_on_modal_close_click = false
text = "dededeggggggggggggggggggggg"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Message"]
autoplay = "RESET"
anims/RESET = SubResource( 13 )
anims/fade_in = SubResource( 14 )
anims/fade_out = SubResource( 15 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.2, 0.2 )
process_mode = 0
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 3.0

[node name="WorldContainer" type="Node" parent="." groups=["world_container"]]
pause_mode = 1

[node name="World" parent="WorldContainer" instance=ExtResource( 7 )]

[connection signal="pressed" from="CanvasLayer/Control/Pause/Button" to="." method="_on_Button_pressed"]

[editable path="CanvasLayer/Transition"]
